new file:   assets/images/british.png 	new file:   assets/images/german.png 	new file:   assets/images/hambuger.png 	new file:   assets/images/indian.png 	new file:   assets/images/italy.png 	new file:   assets/images/mexican.png 	new file:   assets/images/summer.png 	modified:   lib/categories.dart 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,15 @@ flutter:
   assets:
     - assets/images/france.png
     - assets/images/nigerian.png
+    - assets/images/mexican.png
+    - assets/images/summer.png
+    - assets/images/german.png
+    - assets/images/hambuger.png
+    - assets/images/indian.png
+    - assets/images/italy.png
+    - assets/images/british.png
+    
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
