new file:   assets/images/america.png 	new file:   assets/images/japan.png 	new file:   assets/images/korea.png 	new file:   assets/images/morocco.png 	modified:   lib/categories.dart 	modified:   lib/category_grid_item.dart 	modified:   lib/data/dummy_dart.dart 	modified:   lib/models/category.dart 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,11 @@ flutter:
     - assets/images/indian.png
     - assets/images/italy.png
     - assets/images/british.png
+    - assets/images/japan.png
+    - assets/images/morocco.png
+    - assets/images/korea.png
+    - assets/images/america.png
+
     
     
 
