--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
   transparent_image: ^2.0.1
+  get: ^4.6.5
+  flutter_riverpod: 2.3.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_riverpod: ^2.3.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
